Pizza model -> Taks model for DWP II.
