# models/pizza.js
@@ -1,13 +1,14 @@
 const mongoose = require("mongoose");
+const { type } = require("os");
 
 const Schema = mongoose.Schema;
 
 // Define the pizza schema with fields for name, ingredients, price, and available status
 let pizzaSchema = new Schema({
-  name: { type: String },
-  ingredients: { type: String },
-  price: { type: Number },
-  available: { type: Boolean },
+  task: { type: String },
+  description: { type: String },
+  status: { type: String },
+  time: { type: Number },
 });
 
 // Create and export the pizza model based on the defined schema
